Eliminate all public headers except for lib_filter.h

--- a/common/Makefile.am
+++ b/common/Makefile.am
@@ -1,1 +1,1 @@
-pkginclude_HEADERS = diamond_consts.h diamond_types.h sys_attr.h diamond_features.h
+noinst_HEADERS = diamond_consts.h diamond_types.h sys_attr.h
