--- a/lib/liblog/Makefile.am
+++ b/lib/liblog/Makefile.am
@@ -2,6 +2,6 @@ noinst_LTLIBRARIES = liblog.la
 
 liblog_la_SOURCES = lib_log.c
 
-pkginclude_HEADERS = lib_log.h
+noinst_HEADERS = lib_log.h
 
 AM_CPPFLAGS += $(OPENDIAMOND_LIB_CPPFLAGS)
