--- a/lib/libsearchlet/Makefile.am
+++ b/lib/libsearchlet/Makefile.am
@@ -3,6 +3,6 @@ noinst_LTLIBRARIES = libsearchlet.la
 libsearchlet_la_SOURCES = lib_searchlet.c ls_background.c ls_device.c \
 	ls_dctl.c log_impl.h lib_search_priv.h dctl_socket.h log_socket.h
 
-pkginclude_HEADERS = lib_searchlet.h
+noinst_HEADERS = lib_searchlet.h
 
 AM_CPPFLAGS += $(OPENDIAMOND_LIB_CPPFLAGS)
