--- a/lib/libtools/Makefile.am
+++ b/lib/libtools/Makefile.am
@@ -5,6 +5,6 @@ libtools_la_SOURCES = ring.c rtimer.c sig_calc.c \
 	rtimer.h sig_calc_priv.h tools_priv.h rcomb.h rgraph.h ring.h \
 	g_checksum_compat.c g_checksum_compat.h
 
-pkginclude_HEADERS = lib_tools.h sig_calc.h
+noinst_HEADERS = lib_tools.h sig_calc.h
 
 AM_CPPFLAGS += $(OPENDIAMOND_LIB_CPPFLAGS)
