--- a/lib/libfilterexec/Makefile.am
+++ b/lib/libfilterexec/Makefile.am
@@ -2,9 +2,9 @@ AM_LFLAGS = -olex.yy.c
 
 noinst_LTLIBRARIES = libfilterexec.la
 
-AM_CPPFLAGS += -I../../sqlite -DFILTER_RUNNER_PATH=\"$(pkglibexecdir)/filter-runner\"
+AM_CPPFLAGS += -I$(top_srcdir)/sqlite -DFILTER_RUNNER_PATH=\"$(pkglibexecdir)/filter-runner\"
 
-libfilterexec_la_LIBADD = $(GLIB2_LIBS) ../../sqlite/libsqlite.la
+libfilterexec_la_LIBADD = $(GLIB2_LIBS) $(top_builddir)/sqlite/libsqlite.la
 libfilterexec_la_SOURCES = filter_exec.c filter_spec.l fexec_stats.c \
 	fexec_misc.c fexec_opt.c fexec_bypass.c ocache.c cache_filter.c \
 	filter_priv.h fexec_stats.h fexec_opt.h \
