--- a/lib/transport/socket/Makefile.am
+++ b/lib/transport/socket/Makefile.am
@@ -1,7 +1,7 @@
-SUBDIRS = common storagestub hoststub
+SUBDIRS = common storagestub
 
 noinst_LTLIBRARIES = libsocket.la
 
 libsocket_la_SOURCES =
 libsocket_la_LIBADD = common/libdiamondrpc.la storagestub/libstoragestub.la \
-	hoststub/libhoststub.la ${MINIRPC_LIBS}
+	${MINIRPC_LIBS}
