Remove many now-unused RPCs and callbacks

--- a/adiskd/Makefile.am
+++ b/adiskd/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = adiskd
 
-adiskd_SOURCES = adiskd.c search_state.c search_state.h
+adiskd_SOURCES = adiskd.c search_state.h
 
 adiskd_LDADD = $(top_builddir)/lib/libopendiamond.la ${GLIB2_LIBS}
