Do gc-sections in adiskd

--- a/adiskd/Makefile.am
+++ b/adiskd/Makefile.am
@@ -3,3 +3,5 @@ bin_PROGRAMS = adiskd
 adiskd_SOURCES = adiskd.c search_state.h
 
 adiskd_LDADD = $(top_builddir)/lib/libopendiamond.la ${GLIB2_LIBS}
+
+adiskd_LDFLAGS = -Wl,--gc-sections
