rpc: Drop support for miniRPC version codes
- Drop support for obtaining the miniRPC version via the API

- No longer display the miniRPC version in the minirpcgen output and
usage message

--- a/lib/transport/socket/rpc/Makefile.am
+++ b/lib/transport/socket/rpc/Makefile.am
@@ -10,7 +10,5 @@ EXTRA_DIST = COPYING minirpcgen.in
 minirpcgen: minirpcgen.in Makefile
 	@echo "Generating $@ from $<"
 	@sed -e "s=!!RPCGEN!!=$(RPCGEN)=g" \
-				-e "s=!!PERLPATH!!=$(PERL)=g" \
-				-e "s=!!VERSION_CODE!!=$(VERSION_CODE)=g" \
-				-e "s=!!VERSION!!=$(PACKAGE_VERSION)=g" $< > $@
+				-e "s=!!PERLPATH!!=$(PERL)=g" $< > $@
 	@chmod +x $@
