rpc: Remove support for sender-async RPCs

--- a/lib/transport/socket/rpc/test/Makefile.am
+++ b/lib/transport/socket/rpc/test/Makefile.am
@@ -17,15 +17,13 @@ check_LIBRARIES = libcommon.a libxdr.a
 libxdr_a_SOURCES = proto.mx
 nodist_libxdr_a_SOURCES = $(GEN_XDR)
 libxdr_a_CFLAGS = -pthread
-libcommon_a_SOURCES  = common.c common.h client_sync.c client_async.c
+libcommon_a_SOURCES  = common.c common.h client_sync.c
 libcommon_a_SOURCES += server_sync.c server_async.c proto.mx
 nodist_libcommon_a_SOURCES = $(GEN_NOXDR)
 LDADD = libcommon.a libxdr.a
 
 check_PROGRAMS  = test_basic
 check_PROGRAMS += test_async_server
-check_PROGRAMS += test_async_client
-check_PROGRAMS += test_async_both
 check_PROGRAMS += test_sequential_clients
 check_PROGRAMS += test_simultaneous_clients
 check_PROGRAMS += test_set_ops
@@ -38,7 +36,7 @@ check_PROGRAMS += test_accept_close
 check_PROGRAMS += test_simultaneous_close
 check_PROGRAMS += test_exec_close
 check_PROGRAMS += test_errors
-check_PROGRAMS += test_protocol_err
+# check_PROGRAMS += test_protocol_err
 check_PROGRAMS += test_fd_limit
 check_PROGRAMS += test_throughput
 
