--- a/lib/transport/socket/rpc/test/Makefile.am
+++ b/lib/transport/socket/rpc/test/Makefile.am
@@ -24,10 +24,8 @@ LDADD = libcommon.a libxdr.a
 check_PROGRAMS  = test_basic
 check_PROGRAMS += test_sequential_clients
 check_PROGRAMS += test_set_ops
-check_PROGRAMS += test_bind_fd
 check_PROGRAMS += test_unix
-check_PROGRAMS += test_shutdown
-check_PROGRAMS += test_simultaneous_close
+# check_PROGRAMS += test_simultaneous_close
 check_PROGRAMS += test_exec_close
 check_PROGRAMS += test_errors
 # check_PROGRAMS += test_protocol_err
