rpc: Remove all multithreading support
- Remove background I/O thread; all I/O is now done synchronously during
mrpc_send_request() and mrpc_dispatch_loop()

- Remove all locking and support for multiple threads; locking must now
be done outside the library

- Remove connection refcounting

- Remove disconnect callback; disconnection is now signaled by
mrpc_send_request() returning MINIRPC_NETWORK_FAILURE or by
mrpc_dispatch_loop() returning

- Merge mrpc_conn_create() and mrpc_bind_fd()

- Update and re-enable all test cases

- Miscellaneous cleanups

--- a/lib/transport/socket/rpc/lib/Makefile.am
+++ b/lib/transport/socket/rpc/lib/Makefile.am
@@ -1,20 +1,19 @@
 AM_CPPFLAGS += -D_GNU_SOURCE
 AM_CFLAGS += -Wno-missing-field-initializers
-AM_LDFLAGS = $(GLIB2_LIBS) -lpthread
+AM_LDFLAGS = $(GLIB2_LIBS)
 
 # Build generated XDR sources as a separate convenience library with warnings
 # disabled, since rpcgen-produced code generates warnings
 noinst_LTLIBRARIES = libminirpcxdr.la
 libminirpcxdr_la_SOURCES = minirpc.x
 nodist_libminirpcxdr_la_SOURCES = minirpc_xdr.c minirpc_xdr.h
-libminirpcxdr_la_CFLAGS = -pthread -fvisibility=hidden
+libminirpcxdr_la_CFLAGS = -fvisibility=hidden
 CLEANFILES = minirpc_xdr.c minirpc_xdr.h
 BUILT_SOURCES = minirpc_xdr.h
 
 noinst_LTLIBRARIES += libminirpc.la
-libminirpc_la_SOURCES = config.c connection.c message.c event.c serialize.c
-libminirpc_la_SOURCES += xdr_len.c selfpipe.c pollset.c pollset_poll.c util.c
-libminirpc_la_SOURCES += internal.h pollset_impl.h
+libminirpc_la_SOURCES = connection.c message.c serialize.c xdr_len.c util.c
+libminirpc_la_SOURCES += internal.h
 libminirpc_la_LIBADD = libminirpcxdr.la
 
 %_xdr.c: %.x
