--- a/lib/transport/socket/rpc/minirpcgen.in
+++ b/lib/transport/socket/rpc/minirpcgen.in
@@ -1,15 +1,16 @@
 #!!!PERLPATH!!
 
 #
-# miniRPC - TCP RPC library with asynchronous operations
+# miniRPC - Simple TCP RPC library
 #
-# Copyright (C) 2007-2008 Carnegie Mellon University
+# Copyright (C) 2007-2010 Carnegie Mellon University
 #
-# This code is distributed "AS IS" without warranty of any kind under the
-# terms of the GNU Lesser General Public License version 2.1, as shown in
-# the file COPYING.  The output of minirpcgen is not covered by this license,
-# and may be distributed, with or without modification, under the terms of
-# your choice.
+# This software is distributed under the terms of the Eclipse Public
+# License, Version 1.0 which can be found in the file named LICENSE.
+# ANY USE, REPRODUCTION OR DISTRIBUTION OF THIS SOFTWARE CONSTITUTES
+# RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT. The output of minirpcgen
+# is not covered by this license, and may be distributed, with or
+# without modification, under the terms of your choice.
 #
 
 use strict;
