--- a/lib/libfilter/Makefile.am
+++ b/lib/libfilter/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LTLIBRARIES = libfilter.la
 
-libfilter_la_SOURCES = lib_filter.c lib_filter_priv.h lib_filter_sys.h
+libfilter_la_SOURCES = lib_filter.c lib_filter_sys.h
 
 pkginclude_HEADERS = lib_filter.h
 
