Move filter-runner core to libfilter

--- a/lib/libfilter/Makefile.am
+++ b/lib/libfilter/Makefile.am
@@ -1,3 +1,8 @@
+noinst_LTLIBRARIES = libfilter.la
+
+libfilter_la_SOURCES  = lib_filter.c lf_protocol.c lf_wrapper.c
+libfilter_la_SOURCES += lf_priv.h lf_protocol.h
+
 pkginclude_HEADERS = lib_filter.h
 
 AM_CPPFLAGS += $(OPENDIAMOND_LIB_CPPFLAGS)
