--- a/filter-runner/Makefile.am
+++ b/filter-runner/Makefile.am
@@ -1,8 +1,5 @@
 pkglibexec_PROGRAMS = filter-runner
 
-filter_runner_SOURCES = filter-runner.c callbacks.c filter-runner-util.c \
-	filter-runner.h filter-runner-util.h
-
-filter_runner_LDADD = ${GLIB2_LIBS}
+filter_runner_LDADD = $(top_builddir)/lib/libopendiamond.la ${GLIB2_LIBS}
 
 filter_runner_LDFLAGS = -export-dynamic
