Add support code for filters implemented in Python

--- a/lib/python/Makefile.am
+++ b/lib/python/Makefile.am
@@ -1,6 +1,10 @@
 EXTRA_DIST = setup.py \
 	opendiamond/__init__.py \
-	opendiamond/helpers.py
+	opendiamond/helpers.py \
+	opendiamond/bundle.py \
+	opendiamond/filter/__init__.py \
+	opendiamond/filter/parameters.py \
+	tools/diamond-bundle-python
 
 all-local: setup.py $(EXTRA_DIST)
 	$(PYTHON) setup.py build
@@ -11,6 +15,7 @@ install-exec-local:
 uninstall-local:
 	$(RM) $(DESTDIR)$(pythondir)/opendiamond*.egg-info
 	$(RM) -r $(DESTDIR)$(pythondir)/opendiamond
+	$(RM) $(DESTDIR)$(bindir)/diamond-bundle-python
 
 clean-local:
 	$(RM) -r build
