Build libfilter as a separate shared library

--- a/filter-runner/Makefile.am
+++ b/filter-runner/Makefile.am
@@ -1,5 +1,6 @@
 pkglibexec_PROGRAMS = filter-runner
 
 filter_runner_LDADD = $(top_builddir)/lib/libopendiamond.la ${GLIB2_LIBS}
+filter_runner_LDADD += $(top_builddir)/lib/libfilter/libdiamondfilter.la
 
 filter_runner_LDFLAGS = -export-dynamic
