--- a/opendiamond.pc.in
+++ b/opendiamond.pc.in
@@ -1,10 +1,16 @@
+# This file is called opendiamond.pc for historical reasons, but really
+# only describes libfilter, which is the only exported library
+
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: OpenDiamond
-Description: The OpenDiamond platform for interactive search
+Name: OpenDiamond filter library
+Description: Helper library for building OpenDiamond filters
 
+@PKGCONFIG_REQUIRES@: glib-2.0
 Version: @VERSION@
+Libs: -L${libdir} -ldiamondfilter
+Libs.private: @LIBS@
 Cflags: -I${includedir}/opendiamond
