Try validate cookie signature with all available certificates.
We cannot rely on the gnutls_privkey_get_keyid to actually match the
value of gnutls_crt_get_keyid between different versions of gnutls
so instead of trying to be smart just iterate through all certificates.

Move string_hex_encode from cookiecutter to libscope.la.

--- a/lib/libscope/Makefile.am
+++ b/lib/libscope/Makefile.am
@@ -9,6 +9,7 @@ EXTRA_DIST = scope.desktop
 libscope_la_SOURCES = scope_adiskd.c scope_common.c scope_priv.h
 
 cookiecutter_SOURCES = cookiecutter.c
+cookiecutter_LDADD = libscope.la
 
 install-data-hook:
 	desktop-file-install --rebuild-mime-info-cache --vendor diamond $(srcdir)/scope.desktop \
