Move string_hex_encode/decode into string_helpers library.

--- a/lib/libscope/Makefile.am
+++ b/lib/libscope/Makefile.am
@@ -1,4 +1,4 @@
-noinst_LTLIBRARIES = libscope.la
+noinst_LTLIBRARIES = libscope.la libstring_helpers.la
 dist_bin_SCRIPTS = diamond-newscope
 bin_PROGRAMS = cookiecutter
 
@@ -6,10 +6,13 @@ mimepkgdir = $(datarootdir)/mime/packages
 dist_mimepkg_DATA = diamond-scope.xml
 EXTRA_DIST = scope.desktop
 
+libstring_helpers_la_SOURCES = string_helpers.c string_helpers.h
+
 libscope_la_SOURCES = scope_adiskd.c scope_common.c scope_priv.h
+libscope_la_LIBADD = libstring_helpers.la
 
 cookiecutter_SOURCES = cookiecutter.c
-cookiecutter_LDADD = libscope.la
+cookiecutter_LDADD = libstring_helpers.la
 
 install-data-hook:
 	desktop-file-install --rebuild-mime-info-cache --vendor diamond $(srcdir)/scope.desktop \
