Link libfilter against glib

--- a/lib/libfilter/Makefile.am
+++ b/lib/libfilter/Makefile.am
@@ -5,6 +5,8 @@ libdiamondfilter_la_SOURCES += lf_priv.h lf_protocol.h
 
 libdiamondfilter_la_LDFLAGS = -version-info 0:0:0
 
+libdiamondfilter_la_LIBADD = ${GLIB2_LIBS}
+
 pkginclude_HEADERS = lib_filter.h
 
 AM_CPPFLAGS += $(OPENDIAMOND_LIB_CPPFLAGS)
