Remove very old setup script

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 SUBDIRS = sqlite common lib adiskd dataretriever scopeserver tests \
-	target filter-runner volcano
+	filter-runner volcano
 
 EXTRA_DIST = CREDITS LICENSE INSTALL
 
