Add initial version of Python server rewrite

--- a/lib/python/Makefile.am
+++ b/lib/python/Makefile.am
@@ -1,11 +1,25 @@
 EXTRA_DIST = setup.py \
 	opendiamond/__init__.py \
 	opendiamond/bundle.py \
+	opendiamond/config.py \
 	opendiamond/helpers.py \
 	opendiamond/scope.py \
 	opendiamond/filter/__init__.py \
 	opendiamond/filter/parameters.py \
+	opendiamond/server/__init__.py \
+	opendiamond/server/blobcache.py \
+	opendiamond/server/child.py \
+	opendiamond/server/filter.py \
+	opendiamond/server/listen.py \
+	opendiamond/server/object_.py \
+	opendiamond/server/protocol.py \
+	opendiamond/server/rpc.py \
+	opendiamond/server/scopelist.py \
+	opendiamond/server/search.py \
+	opendiamond/server/sessionvars.py \
+	opendiamond/server/statistics.py \
 	tools/cookiecutter \
+	tools/diamondd \
 	tools/diamond-bundle-python
 
 all-local: setup.py $(EXTRA_DIST)
