Normalize mtime on constructed opendiamond/__init__.py
The mtime of a Python source file is encoded in .pyc and .pyo files.  We
rewrite opendiamond/__init__.py on every build, changing the mtime, which
therefore causes RPM file conflicts between its .pyc and .pyo files when
installing both the 32-bit and 64-bit packages.  Fix this by setting the
mtime of the generated source file to the mtime of the file it clobbers.

--- a/lib/python/setup.py.in
+++ b/lib/python/setup.py.in
@@ -2,15 +2,23 @@
 
 from distutils.command.build_py import build_py
 from distutils.core import setup
+import os
 
 class opendiamond_build_py(build_py):
     def build_packages(self):
 	build_py.build_packages(self)
 	# Rewrite opendiamond/__init__.py to contain the software version
-	fh = open(self.get_module_outfile(self.build_lib, ['opendiamond'],
-			'__init__'), 'w')
+	origfile = os.path.join(self.get_package_dir('opendiamond'),
+			'__init__.py')
+	newfile = self.get_module_outfile(self.build_lib, ['opendiamond'],
+			'__init__')
+	fh = open(newfile, 'w')
 	fh.write("__version__ = '@VERSION@'\n")
 	fh.close()
+	# Set the __init__.py utimes to those of the source file to prevent
+	# file conflicts when installing both 32-bit and 64-bit RPM packages
+	st = os.stat(origfile)
+	os.utime(newfile, (st.st_atime, st.st_mtime))
 
 
 setup(
